bb-consent-admin-dashboard/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: consentbb-admin-dashboard
  name: consentbb-admin-dashboard-svc
  namespace: consentbb
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: consentbb-admin-dashboard
