bb-consent-admin-dashboard/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: consentbb-admin-dashboard
  name: consentbb-admin-dashboard
  namespace: consentbb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consentbb-admin-dashboard
  template:
    metadata:
      labels:
        app: consentbb-admin-dashboard
    spec:
      containers:
        - image: eu.gcr.io/jenkins-189019/bb-consent-dashboard:main-20231020005142-f932e7c
          imagePullPolicy: IfNotPresent
          name: consentbb-admin-dashboard
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 5000
              protocol: TCP
          resources: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
  name: consentbb-admin-dashboard-ing
  namespace: consentbb
spec:
  rules:
    - host: consentbb-admin-dashboard.igrant.io
      http:
        paths:
          - backend:
              service:
                name: consentbb-admin-dashboard-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
          - backend:
              service:
                name: consentbb-admin-dashboard-svc
                port:
                  number: 80
            path: /*
            pathType: Prefix
  tls:
    - hosts:
        - consentbb-admin-dashboard.igrant.io
      secretName: tls-secret-govstack
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: consentbb-admin-dashboard
  name: consentbb-admin-dashboard-svc
  namespace: consentbb
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: consentbb-admin-dashboard
